파일 초기 설정